welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((negative == false && ((a>0 && b<0)||(a<0 && b>0))) || (negative == true && a<0 && b<0) )
  ^